HelloUltraviolet/Fixtures/RejectedSource/Patterns/RangePatternNonConst/Expected.uv
//! Expected diagnostic metadata for the RangePatternNonConst rejected-source specimen.

expectedDiagnostic("E-SEM-2721", "rule.17.RangePattern-NonConst")
